--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "npm run build && node ./dist/main.js",
+    "start": "npm run build && node ./dist/main.rest.js",
+    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime SYS:standard",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -18,13 +19,20 @@
     "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.6",
+    "@types/convict-format-with-validator": "^6.0.5",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "chalk": "^5.4.1",
+    "convict": "^6.2.4",
+    "convict-format-with-validator": "^6.2.0",
+    "dotenv": "^16.4.7",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "^0.17.3",
+    "pino-pretty": "^13.0.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.2",
     "tslib": "^2.8.1",
@@ -37,6 +45,9 @@
   },
   "dependencies": {
     "dayjs": "^1.11.13",
-    "got": "^14.4.6"
+    "got": "^14.4.6",
+    "inversify": "^7.0.1",
+    "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2"
   }
 }
