--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
   },
   "devDependencies": {
+    "@typegoose/typegoose": "^12.13.0",
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^8.2.3",
@@ -46,7 +47,8 @@
   "dependencies": {
     "dayjs": "^1.11.13",
     "got": "^14.4.6",
-    "inversify": "^7.0.1",
+    "inversify": "6.0.2",
+    "mongoose": "^8.12.1",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
   }
