--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
   },
   "devDependencies": {
-    "@typegoose/typegoose": "^12.13.0",
+    "@typegoose/typegoose": "12.13.0",
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.1",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -45,10 +46,14 @@
     "npm": "^10"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "got": "^14.4.6",
+    "http-status-codes": "^2.3.0",
     "inversify": "6.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "8.12.1",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
   }
