--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -54,7 +56,10 @@
     "got": "^14.4.6",
     "http-status-codes": "^2.3.0",
     "inversify": "6.0.2",
+    "mime-types": "^3.0.1",
     "mongoose": "8.12.1",
+    "multer": "^1.4.5-lts.2",
+    "nanoid": "^5.1.5",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2"
   }
