--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "tsc --noEmit && node --no-warnings=ExperimentalWarning --loader ts-node/esm",
-    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost",
+    "cli:import": "npm run ts ./src/main.cli.ts -- --import ./mocks/mock-data.tsv",
+    "cli:help": "npm run ts ./src/main.cli.ts -- --help",
+    "cli:version": "npm run ts ./src/main.cli.ts -- --version",
+    "cli:generate": "npm run ts ./src/main.cli.ts -- --generate 6 ./mocks/mock-data.tsv http://localhost:3123/api"
   },
   "devDependencies": {
     "@typegoose/typegoose": "12.13.0",
